# MVP

./: .gitignore  README.md  docker-compose.devel.yaml  docker-compose.yaml  file.txt  naming_convention.md  package-lock.json  package.json  pyproject.toml  report.html  test-report.json  test-results.xml  test_report.html
.github/workflows/: backend-ci.yml
backend/: .coverage  Dockerfile  Dockerfile.devel  app.py  coverage.xml  report.html  routes.py  setup_and_run.sh  test_report.html
backend/src/: app.py  routes.py
backend/static/: create-device.css  delete-device.css  style.css
backend/static/vue/: AssetForm.css  AssetForm.js  AsyncButton.js  BaseModal.css  BaseModal.js  FormField.js  _plugin-vue_export-helper.js  asset-delete-widget.js  constants.js  create-asset-widget.js  create-asset.js  create-device.css  create-device.js  dashboard-logic.js  decision-tree.css  decision-tree.js  (+26 more)
backend/templates/: test_vue.html
backend/tests/: conftest.py
frontend/: Dockerfile.devel  WATCHER_README.md  package-lock.json  package.json  risultati_test_frontend_integration.json  risultati_test_frontend_unit.json  test-results.json  vite.config.js  watcher.sh
frontend/src/: CreateAsset.vue  CreateDeviceForm.vue  DashboardLogic.vue  DeleteDeviceForm.vue  DeviceDeleteWidget.vue  ExportDeviceModal.vue  ImportDeviceModal.vue  OpenSessionAction.vue  constants.js  main-create-asset.js  main-create-device.js  main-dashboard.js  main-decision-tree.js  main-delete-device.js  main-export-device.js  main-import-device.js  main-open-session.js  main.js
frontend/tests/: domain.test.js
json_exemplase/devices/: example_device.json
json_exemplase/standards/: example_standard.json
metrics/: metrics.json
mongo-init/: init.js
script/: collect_metrics.py
script_metrics/: collect_metrics.py
(+388 files in other folders)
