[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask (>=3.1.3,<4.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "pymongo (>=4.17.0,<5.0.0)",
    "waitress (>=3.0.2,<4.0.0)"
]

[dependency-groups]
dev = [
    "mypy (>=1.20.2,<2.0.0)",
    "ruff (>=0.15.12,<0.16.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
