[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask (>=3.1.3,<4.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "pymongo (>=4.17.0,<5.0.0)",
    "waitress (>=3.0.2,<4.0.0)"
]

[dependency-groups]
dev = [
    "mypy (>=1.20.2,<2.0.0)",
    "pytest (>=8.0.0,<9.0.0)",
    "pytest-json-report (>=1.5.0,<2.0.0)",
    "ruff (>=0.15.12,<0.16.0)",
    "pytest-cov (>=7.1.0,<8.0.0)",
    "pytest-html (>=4.2.0,<5.0.0)",
    "pytest-mock (>=3.15.1,<4.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
pythonpath = ["backend/src"]
addopts = """
    --cov=core 
    --cov=adapters
    --cov-report=term-missing 
    --cov-report=xml 
    --cov-report=html 
    --html=test_report.html 
    --self-contained-html
"""

markers = [
    "requirement: ID del requisito coperto dal test",
    "priority: priorità del test (high, medium, low)",
    "type: tipo di test (unità, integrazione, smoke, test di sistema)",
]
